BMSSimplificationEclipseWS/zEUFULL-PRODMigration-MetadataWithPermsXLation/src/objects/Cost_Center_Details_HCPTS__c.object
<CustomObject>
    <description>Cost Center Details for EM</description>
    <fields>
        <fullName>Active_HCPTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cost Center Active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Code_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company code associated to this Cost center number</description>
        <inlineHelpText>Company code associated to this Cost center number</inlineHelpText>
        <label>Company Code Details</label>
        <referenceTo>Company_Code_Details_HCPTS__c</referenceTo>
        <relationshipLabel>Cost Center Details</relationshipLabel>
        <relationshipName>Cost_Center_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Code_Purchase_Org_Country__c</fullName>
        <description>Formula field that combines the Company code, Purchase Org and Country information so that it is easier for users to pick the right cost center</description>
        <formula>Company_Code_HCPTS__r.Name &amp; &apos;:&apos; &amp;  Company_Code_HCPTS__r.Purchase_Org_HCPTS__r.Name &amp; &apos;:&apos; &amp;  TEXT(Company_Code_HCPTS__r.Purchase_Org_HCPTS__r.Country_HCPTS__r.Country_Name_vod__c)</formula>
        <inlineHelpText>Formula field that combines the Company code, Purchase Org and Country information so that it is easier for users to pick the right cost center</inlineHelpText>
        <label>Company Code: Purchase Org: Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Name_HCPTS__c</fullName>
        <label>Cost Center Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_HCPTS__c</fullName>
        <description>Cost Center End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_HCPTS__c</fullName>
        <description>Cost Center External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date_HCPTS__c</fullName>
        <description>Cost Center Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Cost Center Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cost_Center_Name_HCPTS__c</columns>
        <columns>Active_HCPTS__c</columns>
        <columns>Company_Code_Purchase_Org_Country__c</columns>
        <columns>Company_Code_HCPTS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Cost Center Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Center Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>